--- a/angular.json
+++ b/angular.json
@@ -71,7 +71,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-portal:build"
+            "browserTarget": "ng-portal:build",
+            "proxyConfig": "./proxy.conf.js"
+
           },
           "configurations": {
             "production": {
