--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.1.0",
-    "@angular/common": "~11.1.0",
-    "@angular/compiler": "~11.1.0",
-    "@angular/core": "^11.1.0",
-    "@angular/forms": "~11.1.0",
-    "@angular/platform-browser": "~11.1.0",
-    "@angular/platform-browser-dynamic": "~11.1.0",
-    "@angular/router": "~11.1.0",
+    "@angular/animations": "~10.2.0",
+    "@angular/common": "~10.2.0",
+    "@angular/compiler": "~10.2.0",
+    "@angular/core": "^10.2.0",
+    "@angular/forms": "~10.2.0",
+    "@angular/platform-browser": "~10.2.0",
+    "@angular/platform-browser-dynamic": "~10.2.0",
+    "@angular/router": "~10.2.0",
     "@ngx-translate/core": "^13.0.0",
+    "flex.css": "^1.1.7",
     "lodash": "^4.17.20",
     "primeflex": "^2.0.0",
     "primeicons": "^4.0.0",
@@ -30,10 +31,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular/cli": "^11.1.1",
-    "@angular/compiler-cli": "~11.1.0",
+    "@angular/cli": "^10.2.1",
+    "@angular/compiler-cli": "~10.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/lodash": "^4.14.165",
+    "@types/mockjs": "^1.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
@@ -43,6 +45,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "mockjs": "^1.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
