--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@ngx-loading-bar/core": "^5.1.1",
+    "@ngx-loading-bar/http-client": "^5.1.1",
+    "@ngx-loading-bar/router": "^5.1.1",
     "@ngx-translate/core": "^13.0.0",
     "flex.css": "^1.1.7",
     "lodash": "^4.17.20",
