--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "primeicons": "^4.0.0",
     "primeng": "^11.2.0",
     "rxjs": "~6.6.0",
+    "screenfull": "^5.1.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
